修改标签替换方式

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <block name="title">Document</block>
 
 <block name="body">
-    <volist name="array" id="vo">
+    <volist name="array" id="vo" index="key" key="i">
         {$vo}
     </volist>
     将上面的内容放入raw标签：
